--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/backgroundContainer.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/backgroundContainer.cshtml
@@ -5,9 +5,9 @@
 
 @{
     var content = (ContentModels.BackgroundContainer)Model.Content;
-    string props = "";
+    string props = string.Empty;
     string className = "block-background-container w-100 d-block ";
-    string style = "";
+    string style = string.Empty;
 
     if (content.HasValue("additionalCssClasses"))
     {
