--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/calendar.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/calendar.cshtml
@@ -5,8 +5,8 @@
 @{
     var content = (ContentModels.Calendar)Model.Content;
     string className = "mb-3 mb-lg-4 container container--lg";
-    string style = "";
-    string props = "";
+    string style = string.Empty;
+    string props = string.Empty;
 
      if (content.HasValue("additionalCssClasses"))
     {
