--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/educationSection.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/educationSection.cshtml
@@ -8,8 +8,8 @@
     var image = content.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("image");
 
     string className = "block-home-education-section pb-lg-12 overflow-hidden";
-    string style = "";
-    string props = "";
+    string style = string.Empty;
+    string props = string.Empty;
 
 
     if (content.HasValue("additionalCssClasses"))
