--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/genericCard.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/genericCard.cshtml
@@ -5,9 +5,9 @@
 
 @{
     var content = (ContentModels.GenericCard)Model.Content;
-    string props = "";
+    string props = string.Empty;
     string className = "block-generic-card h-100 d-flex flex-column ";
-    string style = "";
+    string style = string.Empty;
 
     if (content.HasValue("additionalCssClasses"))
     {
