--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/genericSection.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/genericSection.cshtml
@@ -5,10 +5,10 @@
 
 @{
     var content = (ContentModels.GenericSection)Model.Content;
-    string props = "";
+    string props = string.Empty;
     string className = "block-generic-section mx-auto ";
-    string style = "";
-    string styleInner = "";
+    string style = string.Empty;
+    string styleInner = string.Empty;
 
     if (content.HasValue("Width"))
     {
