--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/homeHero.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/homeHero.cshtml
@@ -7,8 +7,8 @@
     var content = (ContentModels.HomeHero)Model.Content;
 
     string className = "block-home-hero";
-    string style = "";
-    string props = "";
+    string style = string.Empty;
+    string props = string.Empty;
 
     if (content.Overlay)
     {
