--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/iconItem.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/iconItem.cshtml
@@ -4,7 +4,7 @@
 
     var content = (ContentModels.IconItem)Model.Content;
     string className = "block-icon d-block mx-auto";
-    string style = "";
+    string style = string.Empty;
 
     //CONTRAST
     if (content.HasValue("contrast"))
