--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/imageElement.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/imageElement.cshtml
@@ -6,7 +6,7 @@
 @{
     var content = (ContentModels.ImageElement)Model.Content;
     string className = "block-image-element";
-    string props = "";
+    string props = string.Empty;
     var image = content.Image;
 
     if (content.CurvedCorner)
