--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/membershipSection.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/membershipSection.cshtml
@@ -14,8 +14,8 @@
                                             .Take(5);
 
     string className = "block-home-membership-section";
-    string style = "";
-    string props = "";
+    string style = string.Empty;
+    string props = string.Empty;
 
     if (content.HasValue("additionalCssClasses"))
     {
