--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/overline.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/overline.cshtml
@@ -6,8 +6,8 @@
 @{
     var content = (ContentModels.Overline)Model.Content;
     string className = "overline mb-3 mb-lg-4 overline w-100";
-    string style = "";
-    string props = "";
+    string style = string.Empty;
+    string props = string.Empty;
 
 
 
