--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/richText.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/richText.cshtml
@@ -4,8 +4,8 @@
 @{
     var content = (ContentModels.RichText)Model.Content;
     string className = "block-rich-text rich-text mb-3 mb-lg-4";
-    string style = "";
-    string props = "";
+    string style = string.Empty;
+    string props = string.Empty;
 
     if (content.HasValue("textColor"))
     {
