--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/items.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/items.cshtml
@@ -14,7 +14,7 @@
 @foreach (var item in Model)
 {
     var content = item.Content;
-    string className = "";
+    string className = string.Empty;
 
     if (content.HasValue("Width"))
     {
