--- a/src/WRA.Umbraco.Web/Views/Magazine.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Magazine.cshtml
@@ -13,9 +13,9 @@
     var imageCurrent = content.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("image");
 
     IEnumerable<IPublishedContent> magazineCollections = Umbraco.ContentAtRoot()
-    .DescendantsOrSelfOfType("magazineCollection").Where(x => x.IsVisible());
+    .DescendantsOrSelfOfType("magazineCollection").Where(x => x.IsVisible() && x.IsPublished());
 
-    IEnumerable<IPublishedContent> currentMagazineCollection = Model.SiblingsAndSelf();
+    IEnumerable<IPublishedContent> currentMagazineCollection = content.SiblingsAndSelf();
 
     string currentCollectionYear = String.Format("{0:yyyy}", content.MonthYearTitle);
 
@@ -60,11 +60,13 @@
         <h1 class="h1 mb-5">@content.Name</h1>
         <div class="row">
             <div class="col-lg-4 d-flex flex-column align-items-center pb-6 pb-lg-0">
-                <img src="@imageCurrent?.GetCropUrl(width: 320, height: 412, furtherOptions: "&format=WebP")" srcset="@imageCurrent?.GetCropUrl(width: 640, height: 824, furtherOptions: "&format=WebP") 2x" class="img-fluid fit-cover mb-4" width="320" height="412" alt="@(imageCurrent?.Value("altText"))" />
+                @if(imageCurrent != null)
+                {
+                    <img src="@imageCurrent?.GetCropUrl(width: 320, height: 412, furtherOptions: "&format=WebP")" srcset="@imageCurrent?.GetCropUrl(width: 640, height: 824, furtherOptions: "&format=WebP") 2x" class="img-fluid fit-cover mb-4" width="320" height="412" alt="@(imageCurrent?.Value("altText"))" />
+                }
                 @if (content.Pdf != null)
                 {
                     var pdfFile = content.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("pdf");
-                    
                     <a href="@pdfFile?.GetCropUrl()" target="_blank" class="btn btn-primary">Download PDF</a>
                 }
             </div>
@@ -81,13 +83,13 @@
 
                         @if (content.FeaturedOnlineArticles != null)
                         {
-                            @if (articles.Any())
+                            if (articles.Any())
                             {
                                 <ul class="list-unstyled d-flex flex-column list-group list-group-flush">
                                     @foreach (var child in articles.Where(x => x.IsVisible()).Take(4))
                                     {
 
-                                        var articleTitle = child.HasProperty("Title") ? child.Value("Title") : child.Name;
+                                        var articleTitle = child.HasValue("Title") ? child.Value("Title") : child.Name;
                                         var articleImage = child.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("image");
 
                                         string cleanContent = "";
@@ -100,7 +102,10 @@
                                         var articleSummary = child.HasValue("excerpt") ? child.Value("excerpt") : cleanContent;
 
                                         <li class="d-flex flex-row position-relative list-group-item">
-                                            <img src="@articleImage.GetCropUrl(width: 240, height: 160, furtherOptions: "&format=WebP")" class="img-fluid fit-cover" width="120" height="80" alt="@(imageCurrent.Value("altText") ?? "")" />
+                                            @if (articleImage != null)
+                                            {
+                                                <img src="@articleImage.GetCropUrl(width: 240, height: 160, furtherOptions: "&format=WebP")" class="img-fluid fit-cover" width="120" height="80" alt="@(imageCurrent?.Value("altText") ?? string.Empty)" />
+                                            }
                                             <div class="flex-fill ps-3">
                                                 <a href="@child.Url()" class="stretched-link link-hover-inverse">
                                                     <h4 class="fs-md mb-1">@articleTitle</h4>
@@ -117,24 +122,21 @@
                         }
 
                     </div>
-                    @if (moreArticles != null)
+                    @if (moreArticles.Any())
                     {
-                        @if (moreArticles.Any())
-                        {
-                            <div class="col-lg-5 ps-lg-1 ms-lg-auto">
-                                <div class="ps-lg-4 border-medium border-start no-border-mobile h-100">
-                                    <h3 class="h4 text-white px-3 py-2" style="background-color: var(--bs-blue-dark)">
-                                        More News
-                                    </h3>
-                                    <ul class="list-unstyled gap-2 d-flex flex-column pt-2">
-                                        @foreach (var link in moreArticles)
-                                        {
-                                            <li><a href="@link.Url" class="fw-bold fs-sm" style="color: inherit" target="@link.Target">@link.Name</a></li>
-                                        }
-                                    </ul>
-                                </div>
+                        <div class="col-lg-5 ps-lg-1 ms-lg-auto">
+                            <div class="ps-lg-4 border-medium border-start no-border-mobile h-100">
+                                <h3 class="h4 text-white px-3 py-2" style="background-color: var(--bs-blue-dark)">
+                                    More News
+                                </h3>
+                                <ul class="list-unstyled gap-2 d-flex flex-column pt-2">
+                                    @foreach (var link in moreArticles)
+                                    {
+                                        <li><a href="@link.Url" class="fw-bold fs-sm" style="color: inherit" target="@link.Target">@link.Name</a></li>
+                                    }
+                                </ul>
                             </div>
-                        }
+                        </div>
                     }
                 </div>
                 <a href="/news-updates/" class="btn btn-primary btn-sm d-lg-none w-100 mt-4">See All</a>
