--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/buttons.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/buttons.cshtml
@@ -5,8 +5,8 @@
     var content = (ContentModels.Buttons)Model.Content;
 
     string className = "block-btns d-flex flex-column";
-    string style = "";
-    string props = "";
+    string style = string.Empty;
+    string props = string.Empty;
 
     if (content.HasValue("horizontalAlignment"))
     {
