--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/latestNews.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/latestNews.cshtml
@@ -26,7 +26,7 @@
 
     string className = "block-latest-news py-5 g-4";
     string style = "background: var(--bs-gray-10)";
-    string props = "";
+    string props = string.Empty;
 
 
     if (content.HasValue("additionalCssClasses"))
