--- a/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/supportSection.cshtml
+++ b/src/WRA.Umbraco.Web/Views/Partials/blockgrid/Components/supportSection.cshtml
@@ -7,8 +7,8 @@
     var image = content.Value<Umbraco.Cms.Core.Models.MediaWithCrops>("backgroundImage");
 
     string className = "block-home-support-section position-relative overflow-hidden pb-7 pb-lg-12";
-    string style = "";
-    string props = "";
+    string style = string.Empty;
+    string props = string.Empty;
 
 
     if (content.HasValue("additionalCssClasses"))
