--- a/src/WRA.Umbraco.Web/Views/ProductsPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/ProductsPage.cshtml
@@ -3,24 +3,21 @@
 @using WRA.Umbraco.Models;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ProductsPage>
 @using WRA.Umbraco.Web.Helpers
+@using ContentModels = WRA.Umbraco.Models;
 
-
-@* @await Html.PartialAsync("Commerce/ProductGroupList", Model.Children.OfType<IProductGroup>())*@
 
 @{
-    var sections = Model.Value<IEnumerable<BlockGridItem>>("sections");
+    var content = (ContentModels.ProductsPage)Model;
+    var sections = content.Value<IEnumerable<BlockGridItem>>("gridBlocks");
 
     IEnumerable<IPublishedContent> classCategories = Umbraco.ContentAtRoot()
         .DescendantsOrSelfOfType("categoryPage").Where(x => x.IsVisible() && x.Children.Count() > 0).OrderBy(p => p.Name);
-
 }
 
 <header class="page-header page-header--no-accent">
     <div class="container">
         <div class="container--sm">
-            <h1 class="mb-0">@Model.Name</h1>
-            <span class="d-block">(ProductsPage.cshtml)</span>
-
+            <h1 class="mb-0">@content.Name</h1>
         </div>
     </div>
 </header>
@@ -35,25 +32,27 @@
 
 <div class="container my-4 my-lg-6">
     <div class="row g-4">
-
-        @foreach (var classCategory in classCategories)
+        @if (classCategories.Any())
         {
-            <div class="col-md-4">
-                <div class="block-mini-card mini-card p-2 p-md-4 pb-lg-0 d-flex flex-column">
-                    <h3 class="mini-card__headline h5 mb-4 px-2 px-md-0 pt-4 pt-md-0">@classCategory.Name</h3>
-                    @if (classCategory.HasProperty("description"))
-                    {
-                        <p class="px-2 px-md-0">@classCategory.GetProperty("description").GetSourceValue()</p>
-                    }
-                    <a href="@classCategory.Url()" class="mini-card__link fs-normal mt-auto stretched-link text-decoration-none fw-bold">
-                        Views Offerings
-                        <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M0.82077 8L12.0313 8" stroke="#2560B9" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M8.51727 4L12.5173 8L8.51727 12" stroke="#2560B9" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
-                        </svg>
-                    </a>
+            foreach (var classCategory in classCategories)
+            {
+                <div class="col-md-4">
+                    <div class="block-mini-card mini-card p-2 p-md-4 pb-lg-0 d-flex flex-column">
+                        <h3 class="mini-card__headline h5 mb-4 px-2 px-md-0 pt-4 pt-md-0">@classCategory.Name</h3>
+                        @if (classCategory.HasValue("description"))
+                        {
+                            <p class="px-2 px-md-0">@classCategory.Value("description")</p>
+                        }
+                        <a href="@classCategory.Url()" class="mini-card__link fs-normal mt-auto stretched-link text-decoration-none fw-bold">
+                            Views Offerings
+                            <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M0.82077 8L12.0313 8" stroke="#2560B9" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M8.51727 4L12.5173 8L8.51727 12" stroke="#2560B9" stroke-width="1.37143" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                        </a>
+                    </div>
                 </div>
-            </div>
+            }
         }
     </div>
 </div>
